[gd_scene load_steps=3 format=2]

[ext_resource path="res://Music/PizzaDiscoService-Game.ogg" type="AudioStream" id=1]
[ext_resource path="res://scenes/sound-detector+player/sound_detector+player.gd" type="Script" id=2]

[node name="sound_detector+player" type="Node"]
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="note_timer" type="Timer" parent="."]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="timeout" from="note_timer" to="." method="_on_Timer_timeout"]
